✨ feat(sso-login): 添加CASServletWebSecurityConfig配置类 🔧 fix(sso-login/CasStater): 移除WebSecurityConfigurerAdapter，使用SecurityFilterChain 🔧 fix(spring-business): 统一ConditionalOnProperty添加matchIfMissing属性 ➕ add(spring-common): 添加ExcelTest单元测试 🔧 fix(spring-common/ExcelUtil): 优化字段处理逻辑 🔧 fix(sso-login-test/build.gradle): 更新依赖配置 🔧 fix(sso-login-test/application.yml): 添加默认配置 🔧 fix(ebean-common/EbeanSpringInitListener): 捕获所有异常 🔧 fix(spring-business/DictConvertConfiguration): 修改为@Configuration并添加条件注解 🔧 fix(sso-login-test/TestApplication): 启用WebSecurity